# alfred-cli

./: .alfred.yml  .coveragerc  .editorconfig  .gitignore  .pylintrc  .readthedocs.yaml  LICENSE  MANIFEST.in  Makefile  Pipfile  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: ci-windows.yml  ci.yml  publish.yml
alfred/: __init__.py  ci.py  cli.py  decorator.py  dist.py  docs.py  lib.py  lint.py  logger.py  main.py  os.py  publish.py  tests.py  twine.py  type.py
alfred/resources/: .alfred.yml
alfred_cmd/: ci.py  lint.py  tests.py
alfred_tests/acceptances/: test_cli.py
alfred_tests/units/: test_app.py
docs/source/: advanced.rst  api_reference.rst  benefits.rst  command.rst  command_line.rst  conf.py  features.rst  getting_started.rst  index.rst  installation.rst  pipelines.rst  project.rst  toolkit.rst
src/alfred/: __init__.py  alfred_command.py  alfred_prompt.py  cli.py  commands.py  ctx.py  decorator.py  echo.py  exceptions.py  interpreter.py  lib.py  logger.py  main.py  manifest.py  middlewares.py  os.py  process.py  project.py  resource.py  self_command.py  shell_completion.py  shparser.py  type.py
src/alfred/domain/: command.py  manifest.py  project.py
src/alfred/resources/: bash  cmd.py  command_module_existing.tpl  command_module_new.tpl  command_presentation.tpl  fish  zsh
src/alfred/venv_plugins/: __init__.py  base.py  dotvenv.py  poetry.py  venv.py
tests/acceptances/: README.md  test_cli.py
tests/fixtures/: __init__.py  alfred_fixture.py
tests/fixtures/directory_with_content/: file.txt
tests/fixtures/error_encoding/: encoding_specialchars.txt
tests/fixtures/loading_compiled_dependencies/: README.md
tests/fixtures/multiproject_with_invalid_commands/: .alfred.toml  fixtup.yml
tests/fixtures/path_extends/: .alfred.toml
tests/fixtures/project/: .alfred.toml  fixtup.yml
tests/fixtures/project_multicommands/: .alfred.toml
tests/fixtures/project_with_invalid_commands/: .alfred.toml
tests/fixtures/project_with_name/: .alfred.toml
tests/fixtures/project_with_poetry/: .alfred.toml  pyproject.toml
tests/fixtures/project_with_venv/: .alfred.toml
tests/fixtures/project_without_pythonpath_dependency/: .alfred.toml  fixtup.yml
tests/fixtures/pythonpath_extends/: .alfred.toml  utils2.py
tests/fixtures/pythonpath_project_root/: .alfred.toml
tests/fixtures/wrong_command_module/: .alfred.yml
tests/integrations/: test_commands.py  test_ctx.py  test_interpreter.py  test_main.py  test_manifest.py  test_process.py  test_project.py  test_shell_completion.py
tests/integrations/venv_plugins/: test_poetry.py
tests/units/: test_alfred_command.py  test_alfred_prompt.py  test_ctx.py  test_lib.py  test_main.py  test_process.py  test_self_command.py  test_shparser.py  type.py
(+28 files in other folders)
