[metadata]
name = alfred-cli
version = attr: alfred.__version__
description = alfred is a building tool to make engineering tasks easier to develop and to
  maintain
long_description = file: README.md
long_description_content_type = text/markdown
authors =
    "Fabien Arcellier<fabien.arcellier@gmail.com>"
classifiers =
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Environment :: Console"
license = MIT
readme = README.md
url = https://github.com/FabienArcellier/alfred-cli#alfred
project_urls =
    Source = https://github.com/FabienArcellier/alfred-cli

[options]
packages = find:
package_dir =
    =src
python_requires = >= 3.6
include_package_data = True

install_requires =
    click
    plumbum
    PyYAML

[options.package_data]
resources = alfred/resources/*

[options.packages.find]
where = src

[options.extras_require]
dev =
    build
    pylint
    coverage
    twine

[options.entry_points]
console_scripts =
    alfred = alfred.cli:cli

